syntax = "proto3";

option go_package = "github.com/ChumelRamirez/train-ticket/proto";

package proto;

service TrainTicket {
    rpc PurchaseTicket(TicketRequest) returns (TicketReceipt) {}
}

message TicketRequest {
    string from = 1;
    string to = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
}

message TicketReceipt {
    string from = 1;
    string to = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    double price_paid = 6;
    string seat_section = 7;
}